Second commit - testing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,20 @@ h4 {
     margin-bottom: 40px;
 }
 
+
+
+/*
+.navbar-collapse.collapse.show#navbarSupportContent{
+
+   width: 100px;
+} */
+/*
+li.nav-item.dropdown.show {
+    float: right;
+    width: 200px;
+}
+*/
+
 /*--------------------------------------------Heading*/
 
 header {
